Basic NNUE setup working using the net from Leorik as a POC (own net to be trained soon)